# PythonPerfec_21_10

./: .gitignore
Logging/: logging_config.yaml  logging_correction_1.py  logging_correction_2_3.py  logging_correction_4_declaratif.py  logging_first_demo.py  ratoting.py  time_handler.py
Logging/Monitoring/: monitoring.py
Logging/mon_projet/: main.py
Logging/mon_projet/module_a/: sous_module_a1.py
Portee/: effet_bord.py  main.py  rigolo.py
concurrence/: asyncio_correction1.py  asyncio_demo_as_completed.py  asyncio_demo_as_completed_correction.py  asyncio_demo_create_task.py  asyncio_demo_done_callback.py  asyncio_demo_gather.py  asyncio_demo_gather_correction.py  context_manager_asyncrhone.py  correction_thread_1.py  thread_demo.py  thread_global_memory.py
importation/: file_demo.py  main_demo.py  quelquechose.py
importation/demo_init/: main.py
importation/demo_init/math_demo/: __init__.py  (+1 more)
importation/dossier/: file_demo2.py
metaclasse/: DataDescriptor.ipynb  MRO.ipynb  Metaclass.ipynb  call_demo.py  dataclasse_correction.py  dataclasse_demo.py  dataclasse_produit.py  famille_de_classe.py  heritage.py  interface_avec_decorator.py  interface_validator.py  metaclass.py  polymorphisme.py  utilise_collections.py
packaging/demonstration/: MANIFEST.in  setup.py
packaging/demonstration_poetry/: pyproject.toml
syntaxe_avancee/contextmanager/: contextmanager.ipynb  fichier.txt
syntaxe_avancee/decorator/: decorator.ipynb  example copy.py  example.py
syntaxe_avancee/iterator/: Iterators.ipynb  comprehension.py  explosionram.py  iterator.py  map.py
(+5 files in other folders)
