[tool.poetry]
name = "eductools"
version = "0.0.1"
description = "super demonstration"
authors = ["BiPaulEr"]
license = "MIT"
readme = "README.md"
include = [
	{ path = "examples/**", format = ["sdist"] },
    { path = "eductools_cli/**", format = ["sdist"] }
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
click = "^8.1.7"

[tool.poetry.scripts] 
math = "eductools_cli.math_tools_cli:calcul_cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"


